--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   color: rgb(146, 146, 146);
   font-weight: 700;
   margin-bottom: 1vw;
+  font-size: 12px;
 }
 
 .navbar nav a:hover{
@@ -25,10 +26,6 @@
 
 .navbar nav a.active{
   color: #141414;
-}
-
-.app-download{
-  
 }
 
 .app-download button{
@@ -40,6 +37,22 @@
   cursor: pointer;
   margin: 0 5px;
   font-weight: 600;
+  font-size: 12px;
+
+}
+
+.background{
+  color: #ffffff;
+  font-size: 30VW;
+  position: absolute;
+   top: 0;
+   left: 0;
+   bottom: 0;
+   right: 0;
+   z-index: -1;
+   overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -57,10 +70,74 @@
   justify-content: center;
 }
 
+.slogan h1{
+  font-size: 2.2rem;
+  font-weight: 500;
+  color: #141414;
+  margin-bottom: 1vw;
+}
+
 .mockup{
   grid-column: 3/5;
   grid-row: 1/3;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 2vw;
+}
+
+.main-bottom{
+  grid-row: 2/3;
+  grid-column: 1/3;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* flex-wrap: wrap; */
+}
+
+.main-bottom p{
+  font-size: 9px;
+  color: rgb(146, 146, 146);
+  margin-top: 1vw;
+  margin-right: 15px;
+}
+
+.toggle{
+  font-size: 2.5rem;
+}
+
+/* mobile screen */
+
+@media screen and (max-width: 768px){
+  .main-top{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .background{
+    font-size: 10rem;
+    text-wrap: wrap;
+  }
+
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .logo{
+    order: -1;
+  }
+
+  
+
+  .navbar nav a{
+    margin: 0 10px;
+  }
+
+  .app-download{
+    display: none;
+  }
 }
