--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,18 @@
 .app{
   font-family:  'Poppins', sans-serif;
   /* margin: 2vw 5vw; */
-  
-  
-
+  background-color: #f1f3f2;
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+  z-index: -1;
 }
+
+.container{
+  z-index: 3;
+}
+
+
 .navbar{
     display: flex;
     justify-content: space-between;
@@ -47,7 +55,7 @@
 
 }
 
-.background{
+/* .background{
   color: #ffffff;
   font-size: 20VW;
   position: absolute;
@@ -55,11 +63,11 @@
    left: 0;
    bottom: 0;
    right: 0;
-   z-index: -2;
+   z-index: 1;
    overflow: hidden;
     margin: 0;
     padding: 0;
-}
+} */
 
 
 .main-top{
@@ -118,7 +126,7 @@
   left: 5;
   bottom: 0;
   right: 2;
-  z-index: -1;
+  z-index: 5;
   overflow: hidden;
   margin: 0;
   padding: 0;
@@ -174,7 +182,7 @@
 }
 
 .speaker, .video{
-  height: 450px;
+  height: 400px;
   min-height: 21vw;
 }
 
@@ -203,14 +211,15 @@
   color: #f1f3f2;
   font-size: 1.5rem;
   font-weight: 600;
-  margin-bottom: 1vw;
+  margin-bottom: 2vw;
 }
 
 .banner-content p{
   color: #f1f3f2;
   font-size: .8rem;
   font-weight: 400;
-  margin-bottom: 1vw;
+  margin-right: 2vw;
+  margin-bottom: 2vw;
 }
 
 .banner-content button{
@@ -236,6 +245,38 @@
   font-weight: 400;
   font-size: 3rem;
 }
+
+.product-cards{
+  display: flex;
+  overflow-x: scroll;
+  justify-content: start;
+}
+
+.product-card{
+  min-width: 150px;
+  margin-right: 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.product-card img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.product-card h4{
+  font-size: 1rem;
+  font-weight: 400;
+  margin-top: 1vw;
+}
+
+
 
 
 /* mobile screen */
@@ -321,7 +362,7 @@
 
 /* if the screen is bigger than 1200px add margin to the app */
 @media screen and (min-width: 1350px){
-  html{
+  .container{
     margin-left: 22vw;
     margin-right: 22vw;
   }
