--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,30 @@
   height: 100%;
   width: 100%;
   overflow: scroll;
+  position: absolute;
   z-index: -1;
 }
 
-.container{
-  z-index: 3;
+.dark{
+  background-color: #141414;
+  color: #f1f3f2;
+  transition :  ease-in 1s;
+}
+
+
+.add-margin{
+  margin: 0 5vw;
+}
+
+.dark-mode-nav{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2vw;
+}
+
+.dark-mode-nav nav{
+  display: flex;
+  flex-direction: column;  
 }
 
 
@@ -34,6 +53,24 @@
   font-size: 12px;
 }
 
+.dark-mode-nav nav a{
+  text-decoration: none;
+  color: rgb(146, 146, 146);
+  font-weight: 700;
+  margin-bottom: 5px;
+  font-size: 12px;
+}
+
+.dark-mode-nav nav a:hover{
+  color: #f1f3f2;
+}
+
+.dark-mode-nav nav a.active{
+  color: #f1f3f2;
+}
+
+
+
 .navbar nav a:hover{
   color: #141414;
 }
@@ -52,7 +89,18 @@
   margin: 0 5px;
   font-weight: 600;
   font-size: 12px;
+}
 
+.dark-mode-download button{
+  color: #f1f3f2;
+  background-color: transparent;
+  border: 1px solid #f1f3f2;
+  padding: 10px;
+  border-radius: 25px;
+  cursor: pointer;
+  margin: 0 5px;
+  font-weight: 600;
+  font-size: 12px;
 }
 
 /* .background{
@@ -74,14 +122,20 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+
+  min-height: 80vh;
+  margin-top: 10vh;
+
+  z-index: 5;
 }
 
 .slogan{
   grid-column: 1/3;
-  grid-row: 1/3;
+  grid-row: 1/2;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: end;
+
 }
 
 .slogan h1{
@@ -107,17 +161,31 @@
   flex-direction: row;
   align-items: center;
   /* flex-wrap: wrap; */
+  z-index: 1;
+  overflow: hidden;
 }
 
 .main-bottom p{
-  font-size: 9px;
+  font-size: .9rem;
   color: rgb(146, 146, 146);
   margin-top: 1vw;
   margin-right: 15px;
 }
 
 .toggle{
-  font-size: 2.5rem;
+  font-size: 5rem;
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  width: 10px;
+}
+
+.active{
+  color: #0b6af8;
+}
+
+.toggle:hover{
+  cursor: pointer;
 }
 
 .hang-lights{
@@ -126,7 +194,7 @@
   left: 5;
   bottom: 0;
   right: 2;
-  z-index: 5;
+  z-index: -1;
   overflow: hidden;
   margin: 0;
   padding: 0;
@@ -137,7 +205,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: start;
-  margin-top: 10vh;
+  /* margin-top: 10vh; */
   
 }
 
@@ -241,15 +309,24 @@
 
 .product-title h1{
   text-align: center;
-  margin-bottom: 5vw;
+  margin-bottom: 5vw !important;
   font-weight: 400;
-  font-size: 3rem;
+  font-size: 2.6rem;
+  margin: 0 10vw;
 }
 
 .product-cards{
   display: flex;
   overflow-x: scroll;
   justify-content: start;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; 
+
+  cursor: grab;
+}
+
+.product-cards::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */  
 }
 
 .product-card{
@@ -277,6 +354,74 @@
 }
 
 
+.footer{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr; 
+  grid-gap: 10px;
+  margin: 100px 0;
+  width: 100%;
+}
+
+.footer-left{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  margin-right: 5vw;
+  margin-left: 5vw;
+}
+
+.footer-left h1{
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 1vw;
+}
+
+.footer-left p{
+  font-size: .7rem;
+  font-weight: 400;
+  margin-bottom: 2vw;
+  margin-right: 3vw;
+}
+
+.footer-buttons p{
+  font-size: .7rem;
+  font-weight: 600;
+  margin-bottom: 1vw;
+  margin-left: 10px;
+}
+
+.footer-buttons button{
+  color: #f1f3f2 ;
+  background-color: #141414;
+  border: 1px solid #141414;
+  padding: 6px;
+  border-radius: 25px;
+  cursor: pointer;
+  margin: 0 5px;
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.footer-right{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  object-fit: cover;
+  /* width: 50%; */
+  margin-right: 5vw;
+
+  }
+
+.footer-right img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 
 
 /* mobile screen */
@@ -292,6 +437,9 @@
   .main-top{
     display: flex;
     flex-direction: column;
+    min-height: 50vh;
+    margin-bottom: 10vh;
+    margin-top: 5vh;
   }
 
   .background{
@@ -307,8 +455,17 @@
     text-align: center;
   }
 
+  .dark-mode-nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
   .logo{
     order: -1;
+    margin-bottom: 20px;
   }
 
   .navbar nav a{
@@ -316,6 +473,10 @@
   }
 
   .app-download{
+    display: none;
+  }
+
+  .dark-mode-download{
     display: none;
   }
 
@@ -358,6 +519,32 @@
     width: 80%;
     text-align: center;
   }
+
+  .footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 50px 0;
+  }
+
+  .footer .app-download{
+    display: block;
+  }
+
+  .footer-right{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 5vw;
+  }
+
+  .footer-right img{
+    width: 90%;
+    height: auto;
+  }
+
+
 }
 
 /* if the screen is bigger than 1200px add margin to the app */
@@ -366,4 +553,10 @@
     margin-left: 22vw;
     margin-right: 22vw;
   }
+}
+
+
+.unselectable {
+  user-select: none;
+  pointer-events: none;
 }
