--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,34 @@
   margin: 0 5vw;
 }
 
+.smart{
+  width: 100%;
+  align-items: center;
+  height: 100%;
+  color : rgba(255, 255, 255, 0.7);
+  display: flex;
+  justify-content: start;
+  mix-blend-mode:overlay;
+  font-size: 10vw;
+  z-index: -1;
+  position: absolute;
+  bottom: 10vw;
+}
+
+.ready{
+  top : 10vw;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color : rgba(255, 255, 255, 0.7);
+  display: flex;
+  justify-content: end;
+  mix-blend-mode:overlay;
+  font-size: 10vw;
+  z-index: -1;
+  position: absolute;
+}
+
 .dark-mode-nav{
   display: flex;
   justify-content: space-between;
